www/css/game.css
/*
 * SHARED CSS
 */

/*
 * fix for wp8 reserving space at 
 * bottom of screen for url bar
 */
@-webkit-viewport{width:device-width}
@-moz-viewport{width:device-width}
@-ms-viewport{width:device-width}
@-o-viewport{width:device-width}
@viewport{width:device-width}

html, body {
  margin: 0;
  -ms-touch-action: manipulation !important; /* disable double tap zoom in Win Phone */

  /* disable scrolling away from content in Win Phone (and maybe other platforms?) */
  backface-visibility:hidden;
  -webkit-backface-visibility:hidden;
  overflow: hidden;
  -ms-content-zooming: none; 
  -ms-touch-action:none;
}

.fullscreen {
  position: absolute;
  height: 100vh;
  width: 100vw;
}

.background {  
  z-index: -2;
  background-image: url(../img/background.png);
  background-size: cover;
}

.gameState {
  display: none;
}

.homeState {
  display: none;
}

.highScoreState {
  display: none;
}

.aboutState {
  display: none;
}

/*
 * HOME CSS
 */

.transparent {
  -webkit-filter: blur(3px);
  -moz-filter: blur(3px);
  -o-filter: blur(3px);
  -ms-filter: blur(3px);
  filter: blur(3px);
}

.centered {
  width: 65vw;
  margin: auto;
  text-align: center;
}

 @font-face {
  font-family: "flyFont";
  src: url("../font/gooddog.otf") format("opentype");  
}
    
.button {
  width: 100%;
  border: 2px white solid;
  border-radius: 15px;
  text-align: center;
  color: white;
  margin-bottom: 20px;
  font-size: 30px;
  font-family: "helvetica";
}

.title {
  width: 100%;
  text-align: center;
  margin-top: 60px;
  margin-bottom: 20px;
}

.firstButton {
  margin-top: 50px;
}

.menuFly {
  max-height: 45vw;
}

/*
 * GAME CSS
 */

.gameText {
  color: white;
  font-family: "helvetica";
  font-size: 1.25em;
}

.inline {
  display: inline-block;
}

.fly {
  position: absolute;
  background-image: url(../img/fly.png);
  background-size: cover;
}

.poisonFly {
  position: absolute;
  background-image: url(../img/poisonFly.png);
  background-size: cover;
}

.fastFly {
  position: absolute;
  background-image: url(../img/fastFly.png);
  background-size: cover;
}

.bigFly {
  position: absolute;
  background-image: url(../img/bigFly.png);
  background-size: cover;
}

.explosiveFly {
  position: absolute;
  background-image: url(../img/explosiveFly.png);
  background-size: cover;
}

@-webkit-keyframes splat {
    from {opacity: 1;}
    to {opacity: 0;}
}
@keyframes splat {
    from {opacity: 1;}
    to {opacity: 0;}
}

.splat {
  position: absolute;
  background-image: url(../img/splat.png);/*, url(../img/fly.png);*/
  background-size: cover;

  animation:splat 3s 1;
  -webkit-animation:splat 3s 1;
  animation-fill-mode: forwards;  
  -webkit-animation-fill-mode: forwards;
}


/*
 * todo: There has to be a better way to do this...
 */
 
.explosiveFly.splat {
  position: absolute;
  background-image: url(../img/splat.png), url(../img/explosiveFly.png);
  background-size: cover;

  animation:splat 3s 1;
  -webkit-animation:splat 3s 1;
  animation-fill-mode: forwards;  
  -webkit-animation-fill-mode: forwards;
}

.fastFly.splat {
  position: absolute;
  background-image: url(../img/splat.png), url(../img/fastFly.png);
  background-size: cover;

  animation:splat 3s 1;
  -webkit-animation:splat 3s 1;
  animation-fill-mode: forwards;  
  -webkit-animation-fill-mode: forwards;
}

.poisonFly.splat {
  position: absolute;
  background-image: url(../img/splat.png), url(../img/poisonFly.png);
  background-size: cover;

  animation:splat 3s 1;
  -webkit-animation:splat 3s 1;
  animation-fill-mode: forwards;  
  -webkit-animation-fill-mode: forwards;
}

.bigFly.splat {
  position: absolute;
  background-image: url(../img/splat.png), url(../img/bigFly.png);
  background-size: cover;

  animation:splat 3s 1;
  -webkit-animation:splat 3s 1;
  animation-fill-mode: forwards;  
  -webkit-animation-fill-mode: forwards;
}

.fly.splat {
  position: absolute;
  background-image: url(../img/splat.png), url(../img/fly.png);
  background-size: cover;

  animation:splat 3s 1;
  -webkit-animation:splat 3s 1;
  animation-fill-mode: forwards;  
  -webkit-animation-fill-mode: forwards;
}

/*
 * end of todo
 */

